Commented-out the line in ViewModel/ProductRenderer.php that caused the TypeError: Cannot access offset of type string on string... Now the URL https://ad0-e702.local/collection/product/ correctly returns 1891 rows as in the equivalent SQL query documented on line 47 of ViewModel/ProductRenderer.php

--- a/view/frontend/templates/index.phtml
+++ b/view/frontend/templates/index.phtml
@@ -15,7 +15,7 @@ $productCollection = $productRendererViewModel->getProductCollection();
     <?php
     $count = 1;
     foreach ($productCollection as $product) {
-        echo '<p>' . $count++ . ' ' . $escaper->escapeHtml($product->getName());
+        echo '<p>' . $count++ . ' | ' . $product->getSku();
     }
     ?>
 <?php endif; ?>
