Added a call to $productCollection->getSize() at the bottom of the page in view/frontend/templates/index.phtml

--- a/view/frontend/templates/index.phtml
+++ b/view/frontend/templates/index.phtml
@@ -18,5 +18,6 @@ $productCollection = $productRendererViewModel->getProductCollection();
         echo '<p>' . $count++ . ' | ' . $product->getSku();
     }
     ?>
+    <p> collection->getSize() = <?= $productCollection->getSize(); ?> products
 <?php endif; ?>
 </p>
